@@ -1,19 +1,18 @@
 package edu.eci.cvds.proyect.booking.persistency.controller;
 
-import edu.eci.cvds.proyect.booking.persistency.dto.BookingDto;
+import edu.eci.cvds.proyect.booking.exceptions.AppException;
+import edu.eci.cvds.proyect.booking.exceptions.SessionException;
 import edu.eci.cvds.proyect.booking.persistency.entity.Booking;
+import edu.eci.cvds.proyect.booking.persistency.entity.User;
+import edu.eci.cvds.proyect.booking.persistency.service.AuthorizationService;
 import edu.eci.cvds.proyect.booking.persistency.service.BookingService;
+import edu.eci.cvds.proyect.booking.persistency.service.SessionService;
 
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
-import jakarta.validation.Valid;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -21,96 +20,177 @@ import org.springframework.web.bind.annotation.*;
 @RequestMapping("/Booking")
 public class BookingController {
     
+    @Autowired
     private BookingService bookingService;
-    private static final String ERROR_KEY = "Error";
-    private static final String MESSAGE_KEY = "Message";
-    private static final Logger logger = LoggerFactory.getLogger(BookingController.class);
 
     @Autowired
-    public BookingController(BookingService bookingService) {
-        this.bookingService = bookingService;
-    }
+    private SessionService sessionService;
 
+    @Autowired
+    private AuthorizationService authorizationService;
+
+    /**
+     * Obtener todas las reservas.
+     *
+     * @return Lista de todas las reservas.
+     */
     @GetMapping
-    public ResponseEntity<List<Booking>> getAll() {
+    public ResponseEntity<?> getAllbookings(@RequestHeader("Authorization") String sessionToken) {
         try {
-            return new ResponseEntity<>(bookingService.getAll(), HttpStatus.OK);
+            User userLogged = this.getUserFromSessions(sessionToken);
+            List<Booking> bookings = bookingService.getAllBookings(userLogged);
+            bookings.forEach(elem -> elem.setOwnerIds(null));
+            return ResponseEntity.ok(bookings);
         } catch (Exception e) {
-            String errorMessage = (e.getCause() != null) ? e.getCause().toString() : e.getMessage();
-            logger.error("Error al obtener las reservas: {}", errorMessage, e);
-            return new ResponseEntity<>(Collections.emptyList(), HttpStatus.INTERNAL_SERVER_ERROR);
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            } else {
+                return ResponseEntity.status(500).body(Collections.singletonMap("error ", "Server error "));
+            }
         }
-        
     }
+
+    /**
+     * Obtener una reserva por su ID.
+     *
+     * @param id Identificador de la reserva.
+     * @return La reserva correspondiente al ID proporcionado.
+     */
     @GetMapping("/{id}")
-    public ResponseEntity<Object> getOne(@PathVariable("id") Integer id) {
+    public ResponseEntity<?> getbookingById(@RequestHeader("Authorization") String sessionToken, @PathVariable("id") String id) {
         try {
-            return new ResponseEntity<>(bookingService.getOne(id), HttpStatus.OK);
+            User userLogged = this.getUserFromSessions(sessionToken);
+            Booking booking = bookingService.getBookingById(id, userLogged);
+            return ResponseEntity.ok(booking);
         } catch (Exception e) {
-            String errorMessage = "Error al obtener la reserva con ID " + id;
-            logger.error("{}: {}", errorMessage, e.getMessage(), e);
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put(ERROR_KEY, errorMessage);
-            errorResponse.put("details", e.getMessage());
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-        }       
-    }
-
-
-    @PostMapping 
-    public ResponseEntity<Object> save(@Valid @RequestBody BookingDto bookingDto) {
-        try {
-            Booking savedBooking = bookingService.save(bookingDto);
-            return new ResponseEntity<>(savedBooking, HttpStatus.CREATED);
-        } catch (Exception e) {
-            String errorMessage = (e.getCause() != null) ? e.getCause().toString() : e.getMessage();
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put(ERROR_KEY, "Error al guardar la reserva");
-            errorResponse.put(MESSAGE_KEY, errorMessage);
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error ", "Server error "));
         }
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<Object> update(@PathVariable("id") Integer id,@Valid @RequestBody BookingDto bookingDto) {
+    /**
+     * Crear una nueva reserva.
+     *
+     * @param booking Modelo de reserva enviado en el cuerpo de la solicitud.
+     * @return El UUID de la nueva reserva creada.
+     */
+    @PostMapping
+    public ResponseEntity<?> createbooking(@RequestHeader("Authorization") String sessionToken, @RequestBody Booking booking) {
         try {
-            return new ResponseEntity<>(bookingService.update(id, bookingDto), HttpStatus.OK);
+            User userLogged = this.getUserFromSessions(sessionToken);
+            Booking Booking = bookingService.createBooking(booking, userLogged);
+            Booking.setOwnerIds(null);
+            return ResponseEntity.status(201).body(Booking);
         } catch (Exception e) {
-            String errorMessage = (e.getCause() != null) ? e.getCause().toString() : e.getMessage();
-            logger.error("Error al actualizar reserva con ID {}: {}", id, errorMessage, e);
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put(ERROR_KEY, "Error al actualizar la reserva");
-            errorResponse.put(MESSAGE_KEY, errorMessage);
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error  ", "Server error  "));
         }
-        
     }
 
+    /**
+     * Actualizar una reserva existente por su ID.
+     *
+     * @param id   Identificador de la reserva a actualizar.
+     * @param booking Modelo de reserva actualizado.
+     * @return La reserva actualizada.
+     */
+    @PatchMapping("/{id}")
+    public ResponseEntity<?> updatebooking(@RequestHeader("Authorization") String sessionToken, @PathVariable("id") String id, @RequestBody Booking booking) {
+        try {
+            User userLogged = this.getUserFromSessions(sessionToken);
+            Booking updatedbooking = bookingService.updateBooking(id, booking, userLogged);
+            updatedbooking.setOwnerIds(null);
+            return ResponseEntity.status(200).body(updatedbooking);
+        } catch (Exception e) {
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Server error"));
+        }
+    }
+
+    /**
+     * Eliminar una reserva por su ID.
+     *
+     * @param id Identificador de la reserva a eliminar.
+     * @return Respuesta sin contenido.
+     */
     @DeleteMapping("/{id}")
-    public ResponseEntity<Object> delete(@PathVariable("id") Integer id) {
+    public ResponseEntity<?> deletebooking(@RequestHeader("Authorization") String sessionToken, @PathVariable("id") String id) {
         try {
-            bookingService.delete(id);
-            return new ResponseEntity<>(Collections.singletonMap("message", "Reserva eliminada correctamente"), HttpStatus.OK);
+            User userLogged = this.getUserFromSessions(sessionToken);
+            Booking deletedbooking = bookingService.deleteBooking(id, userLogged);
+            deletedbooking.setOwnerIds(null);
+            return ResponseEntity.ok(deletedbooking);
         } catch (Exception e) {
-            String errorMessage = (e.getCause() != null) ? e.getCause().toString() : e.getMessage();
-            logger.error("Error al eliminar reserva con ID {}: {}", id, errorMessage, e);
-            Map<String, String> errorResponse = new HashMap<>();
-            errorResponse.put(ERROR_KEY, "Error al eliminar la reserva");
-            errorResponse.put(MESSAGE_KEY, errorMessage);
-            return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Server error"));
         }
-                    
     }
 
-    // 📌 Nuevo endpoint para generar reservas aleatorias
-    @PostMapping("/generate")
-    public ResponseEntity<Object> generateBookings() {
+    /**
+     * Eliminar todas las reservas.
+     *
+     * @return Un mensaje indicando cuántas reservas fueron eliminadas exitosamente.
+     */
+    @DeleteMapping("/all")
+    public ResponseEntity<?> deleteAllbookings(@RequestHeader("Authorization") String sessionToken) {
+
         try {
-            List<Booking> generatedBookings = bookingService.generateRandomBookings();
-            return new ResponseEntity<>(Map.of("message", generatedBookings.size() + " reservas generadas correctamente"), HttpStatus.CREATED);
+            User userLogged = this.getUserFromSessions(sessionToken);
+            List<Booking> bookingDeleted = this.bookingService.deleteAllBookings(userLogged);
+            return ResponseEntity.status(200).body(bookingDeleted.size() + " bookings were deleted successfully");
         } catch (Exception e) {
-            logger.error("Error al generar reservas aleatorias: {}", e.getMessage(), e);
-            return new ResponseEntity<>(Map.of(ERROR_KEY, "Error al generar reservas", MESSAGE_KEY, e.getMessage()), HttpStatus.INTERNAL_SERVER_ERROR);
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Server error"));
         }
+    }
+
+    /**
+     * Generar reservas de ejemplo.
+     *
+     * @return Un mensaje indicando cuántas reservas fueron generadas.
+     */
+    @PostMapping("/gen")
+    public ResponseEntity<?> generatebookings(@RequestHeader("Authorization") String sessionToken) {
+        try {
+            User userLogged = this.getUserFromSessions(sessionToken);
+            authorizationService.adminResource(sessionToken);
+            List<Booking> newbookings = bookingService.generateExamples(userLogged);
+            return ResponseEntity.status(201).body(newbookings.size() + " bookings were generated");
+        } catch (Exception e) {
+            if (e instanceof AppException) {
+                return ((AppException) e).getResponse();
+            }
+            return ResponseEntity.status(500).body(Collections.singletonMap("error", "Server error"));
+        }
+    }
+
+    /**
+     * Endpoint for verify service state
+     *
+     * @return message
+     */
+    @GetMapping("/health")
+    public ResponseEntity<?> checkHealth() {
+        HashMap<String, String> response = new HashMap<>();
+        response.put("status", "UP");
+        response.put("message", "The server is up");
+        return ResponseEntity.ok(response);
+    }
+
+    private User getUserFromSessions(String sessionToken) throws SessionException {
+        if (sessionToken == null || !this.sessionService.isSessionActive(sessionToken)) {
+            return null;
+        }
+        return this.sessionService.getUserFromSession(sessionToken);
     }
 }
